--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+@import "tw-animate-css";
+
+@custom-variant dark (&:is(.dark *));
 @plugin "daisyui";
 
 /* tech titan color pallete */
@@ -31,6 +34,20 @@
   --color-disabled: var(--disabled-color);
   --font-display: "Inter", "sans-serif";
   --letter-spacing-tighter: -0.025em;
+  --animate-meteor: meteor 5s linear infinite;
+  @keyframes meteor {
+    0% {
+      transform: rotate(var(--angle)) translateX(0);
+      opacity: 1;
+    }
+    70% {
+      opacity: 1;
+    }
+    100% {
+      transform: rotate(var(--angle)) translateX(-500px);
+      opacity: 0;
+    }
+  }
 }
 
 @media (prefers-color-scheme: dark) {
