feat: implement login and signup pages with form handling and navigation

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -106,3 +106,40 @@ body {
   scroll-snap-align: start;
   scroll-snap-stop: always;
 }
+
+.shine {
+  font-size: 2.5rem;
+  font-weight: 800;
+  color: rgba(255, 255, 255, 0.3);
+  background: #222 -webkit-gradient(
+      linear,
+      left top,
+      right top,
+      from(#222),
+      to(#222),
+      color-stop(0.5, #fff)
+    ) 0 0 no-repeat;
+  background-image: -webkit-linear-gradient(
+    -40deg,
+    transparent 0%,
+    transparent 40%,
+    #fff 50%,
+    transparent 60%,
+    transparent 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-background-size: 50px;
+  -webkit-animation: zezzz 5s infinite;
+}
+@-webkit-keyframes zezzz {
+  0%,
+  10% {
+    background-position: -400px;
+  }
+  20% {
+    background-position: top left;
+  }
+  100% {
+    background-position: 400px;
+  }
+}
